[package]
name = "rppal_shift"
version = "0.1.0"
edition = "2021"
authors = ["Malhaar Karandikar <malhaar.karandikar@gmail.com>"]
license = "MIT"
description   = "A Rust crate for manipulating shift registers via the GPIO pins on a Raspberry Pi."
homepage      = "https://github.com/Malhaar-k/rppal-shift.git"
repository    = "https://github.com/Malhaar-k/rppal-shift.git"
readme        = "README.md"
keywords      = ["raspberry", "pi", "rpi", "gpio", "shift_register"]
exclude       = [
    ".gitignore",
    "target/*"
]

[dependencies]
rppal = { version = "0.22.1"}

# This makes smaller files:
[profile.release]
lto = true
panic = 'abort'
opt-level = 3
